# short

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  openapi.json
docs/superpowers/plans/: 2026-05-15-admin-panel-and-tanstack-refactor.md
docs/superpowers/specs/: 2026-05-15-admin-panel-and-tanstack-refactor-design.md
frontend/: index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: app.css  main.tsx
frontend/src/api/: client.ts  queries.ts
frontend/src/components/: CreateUserForm.tsx  EditShortlinkModal.tsx  EditUserModal.tsx  Modal.tsx  NewShortlinkForm.tsx  QRCodeModal.tsx  SetPasswordModal.tsx
frontend/src/routes/: _authed.admin.invites.tsx  _authed.admin.tsx  _authed.admin.users.tsx  _authed.dashboard.change-password.tsx  _authed.dashboard.tsx  _authed.tsx  index.tsx  login.tsx  signup.tsx
migrations/: 20250420091012_init.sql  20250620052028_shorturls.sql  20250621093643_invite_codes.sql  20260515232730_admin_panel.sql
src/: catchall.rs  db.rs  error.rs  main.rs  state.rs
src/extractors/: jwt.rs  mod.rs  users.rs
src/structs/: mod.rs  shortlink.rs  user.rs
src/util/: auth.rs  cloudflare.rs  cookies.rs  mod.rs
src/v1/: mod.rs
src/v1/admin/: mod.rs
src/v1/auth/: change_password.rs  invite.rs  login.rs  logout.rs  mod.rs  signup.rs
src/v1/shorturls/: delete.rs  mod.rs  myurls.rs  new.rs  update.rs
src/v1/user/: get_self.rs  mod.rs  update.rs
web/: change-password.html  index.css  index.html  index.js  invite.html  login.html  logout.html  signup.html
web/dashboard/: dashboard.css  index.html
(+10 files in other folders)
