[package]
name = "short"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.3", features = ["macros", "json"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs"] }
utoipa = { version = "5.3.1", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
utoipa-axum = "0.2"
serde = "1"
serde_json = "1"
anyhow = "1.0.92"
sqlx = { version = "0.8.2", features = [
  "sqlite",
  "chrono",
  "runtime-tokio-rustls",
  "macros",
  "uuid",
] }
uuid = { version = "1.4.1", features = ["serde", "v4"] }
chrono = { version = "0.4.26", features = ["serde"] }
dotenv = "0.15.0"
argon2 = "0.5.3"
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.8"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
rand_core = { version = "0.6", features = ["std"] }
nanoid = "0.4.0"
cookie = "0.18.0"
